welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: missing arguments for method == in class Object;
follow this method with `_' if you want to treat it as a partially applied function
		return == T(w)
                       ^Array1:14: error: type mismatch;
 found   : Unit
 required: java.awt.Color
		for(w<- 0 to T.length-1) {
                     ^